# Course_work_5

./: README.md  main.py  pyproject.toml
data/: config.py
src/: funcs.py  work_with_api.py  work_with_database.py
