[tool.poetry]
name = "course_work_5"
version = "0.1.0"
description = ""
authors = ["Vladimir Blyntsev <blyncev@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
psycopg2 = "^2.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
